discussion/kv_engine/156115/156115_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

open a file

Change-Id: I733f300befd5e91dcec5f2ca899540016bd72fb7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-18 13:45:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-18 14:21:19.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10025/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:117:24: error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        WRITE_CSTR(fd, frame);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:114:52: note: "frame" declared here
static void write_to_logger(void* ctx, const char* frame) {
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:115:20: note: lambda expression begins here
    auto writeFn = [](int fd) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:170:24: error: variable "descriptor" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        WRITE_CSTR(fd, descriptor.path());
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:165:52: note: "descriptor" declared here
static bool dumpCallback(const MinidumpDescriptor& descriptor,
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:168:20: note: lambda expression begins here
    auto writeFn = [](int fd) {
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10025/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:117:24:
error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10025/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31632/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/breakpad.cc:117:24:
error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31632/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11592/ : FAILURE

Compile error at [2021-06-18T13:57:11.092Z] ../kv_engine/utilities/breakpad.cc:117:24:
error: ?frame? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12024/ : FAILURE

Compile error at [2021-06-18T13:56:58.795Z] ../kv_engine/utilities/breakpad.cc:117:24:
error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12024/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11743/ : FAILURE

Compile error at [2021-06-18T13:58:49.578Z] ../kv_engine/utilities/breakpad.cc:117:24:
error: ?frame? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19615/ : FAILURE

Compile error at [2021-06-18T13:58:24.681Z] ../kv_engine/utilities/breakpad.cc:117:24:
error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19615/ )

http://cv.jenkins.couchbase.com/job/ming-test2/520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37032/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8618/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10671/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
